--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Plateful" parent="Theme.Material3.DayNight">
         <item name="windowNoTitle">true</item>
+        <item name="android:windowDisablePreview">true</item>
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorOnPrimary">@color/onPrimary</item>
         <item name="colorControlActivated">@color/primaryColor</item>
