--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="hintTextColor">#6C6C6C</color>
     <color name="textColor">#000000</color>
     <color name="subTextColor">#4F4F4F</color>
+    <color name="red">#ff0000</color>
 </resources>
