--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,6 +106,17 @@
     </style>
 
 
+    <style name="HeadingText_1">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_extra_bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <!--
+        This is similar to HeadingText_1. I still haven't decided whether the HeadingText_1 will be larger or not
+    -->
     <style name="HeadingText_2">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -114,8 +125,24 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="HeadingText_3">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
-    <style name="SubText">
+
+    <style name="SubTitle_1">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="SubTitle_2">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
@@ -134,6 +161,7 @@
         <item name="android:solidColor">@color/white</item>
     </style>
 
+
     <style name="WhiteButton" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_width">225dp</item>
         <item name="android:layout_height">40dp</item>
@@ -145,6 +173,40 @@
         <item name="android:textAllCaps">false</item>
         <item name="iconTint">@null</item>
         <item name="iconSize">26dp</item>
+    </style>
+
+    <style name="BlackButton_Rounded" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="cornerRadius">32dp</item>
+        <item name="android:paddingEnd">62dp</item>
+        <item name="android:paddingStart">62dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="iconTint">@null</item>
+        <item name="iconSize">12dp</item>
+        <item name="iconGravity">textStart</item>
+        <!--The icon is not showing!-->
+        <!--<item name="iconTint">@color/white</item>
+        <item name="iconSize">32dp</item>
+        <item name="iconGravity">start</item>
+        <item name="iconPadding">4dp</item>-->
+    </style>
+
+
+    <style name="LargeCard">
+        <item name="cardCornerRadius">8dp</item>
+        <!--<item name="cardUseCompatPadding">true</item>-->
+        <!--<item name="cardPreventCornerOverlap">true</item>-->
+        <item name="cardElevation">4dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
