--- a/app/src/main/res/layout/fragment_sign_in_screen.xml
+++ b/app/src/main/res/layout/fragment_sign_in_screen.xml
@@ -47,7 +47,7 @@
 
     <TextView
         android:id="@+id/textView_SignIn_Subtext"
-        style="@style/SubText"
+        style="@style/SubTitle_2"
         android:text="@string/welcome_back"
         app:layout_constraintStart_toStartOf="@id/textView_SignIn"
         app:layout_constraintTop_toBottomOf="@id/textView_SignIn"
