--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -98,7 +98,7 @@
 
     <TextView
         android:id="@+id/textView_or_use_social_media_sign_up"
-        style="@style/SubText"
+        style="@style/SubTitle_2"
         android:layout_marginStart="28dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/poppins_medium"
@@ -146,7 +146,7 @@
 
     <TextView
         android:id="@+id/textView_already_have_an_account"
-        style="@style/SubText"
+        style="@style/SubTitle_2"
         android:layout_marginStart="28dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins_medium"
