--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_transparent">#CC000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_gradient">#08FFFFFF</color>
     <color name="primaryColor">#05AB92</color>
     <color name="primaryColorLight">#41AA96</color>
+    <color name="primaryColorVeryLight">#1A05AB92</color> <!--this will be the color for the main search bar-->
     <color name="onPrimary">#FFFFFF</color>
     <color name="hintTextColor">#6C6C6C</color>
     <color name="textColor">#000000</color>
