--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,18 @@
         <item name="android:titleMarginBottom">16dp</item>
     </style>
 
+    <style name="MainSearchTextInputLayout" parent="GeneralSearchTextInputLayout">
+        <item name="boxBackgroundColor">@color/primaryColorVeryLight</item>
+        <item name="placeholderTextColor">@color/subTextColor</item>
+        <item name="boxCornerRadiusTopStart">28dp</item>
+        <item name="boxCornerRadiusTopEnd">28dp</item>
+        <item name="boxCornerRadiusBottomStart">28dp</item>
+        <item name="boxCornerRadiusBottomEnd">28dp</item>
+        <item name="startIconTint">@null</item>
+        <item name="android:titleMarginTop">32dp</item>
+        <item name="android:titleMarginBottom">16dp</item>
+    </style>
+
 
     <style name="CustomTextInputEditText_Username" parent="GeneralCustomTextInputEditText">
         <item name="android:inputType">textPersonName</item>
@@ -133,6 +145,14 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="HeadingText_4">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_semi_bold</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 
     <style name="SubTitle_1">
         <item name="android:layout_width">wrap_content</item>
@@ -149,6 +169,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/subTextColor</item>
     </style>
+
 
 <!--
     This divider is supposed to show on the Welcome screen twice; on the left and right, but it doesn't
@@ -198,6 +219,29 @@
         <item name="iconPadding">4dp</item>-->
     </style>
 
+    <style name="BlackButton_Rounded_Small" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="cornerRadius">22dp</item>
+        <item name="android:paddingEnd">18dp</item>
+        <item name="android:paddingStart">18dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="iconTint">@null</item>
+        <item name="iconSize">12dp</item>
+        <item name="iconGravity">textStart</item>
+        <!--The icon is not showing!-->
+        <!--<item name="iconTint">@color/white</item>
+        <item name="iconSize">32dp</item>
+        <item name="iconGravity">start</item>
+        <item name="iconPadding">4dp</item>-->
+    </style>
+
 
     <style name="LargeCard">
         <item name="cardCornerRadius">8dp</item>
@@ -206,6 +250,18 @@
         <item name="cardElevation">4dp</item>
         <item name="android:padding">8dp</item>
         <item name="android:layout_margin">16dp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="MediumCard">
+        <item name="cardCornerRadius">8dp</item>
+        <item name="android:layout_width">170dp</item>
+        <item name="android:layout_height">100dp</item>
+        <!--<item name="cardUseCompatPadding">true</item>-->
+        <!--<item name="cardPreventCornerOverlap">true</item>-->
+        <item name="cardElevation">4dp</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:layout_margin">8dp</item>
         <item name="android:background">@color/white</item>
     </style>
 
