--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_gradient">#08FFFFFF</color>
     <color name="primaryColor">#05AB92</color>
+    <color name="primaryColorDark">#008D77</color>
     <color name="primaryColorLight">#41AA96</color>
     <color name="primaryColorVeryLight">#1A05AB92</color> <!--this will be the color for the main search bar-->
     <color name="onPrimary">#FFFFFF</color>
@@ -12,4 +13,5 @@
     <color name="textColor">#000000</color>
     <color name="subTextColor">#4F4F4F</color>
     <color name="red">#ff0000</color>
+
 </resources>
