--- a/app/src/main/res/layout/fragment_favorite_meals_screen.xml
+++ b/app/src/main/res/layout/fragment_favorite_meals_screen.xml
@@ -1,14 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".favoritemeal.FavoriteMealsScreen">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".favoritemeal.view.FavoriteMealsScreen">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_horizontal_guideline"
+        app:layout_constraintGuide_begin="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottom_horizontal_guideline"
+        app:layout_constraintGuide_end="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_vertical_guideline"
+        app:layout_constraintGuide_begin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_vertical_guideline"
+        app:layout_constraintGuide_end="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
+        app:layout_constraintGuide_begin="82dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
+    <ImageView
+        android:id="@+id/imageView_ic_profile_photo"
+        app:layout_constraintBottom_toTopOf="@id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
+        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_account" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/textView_YourFavoriteMeals"
+        style="@style/HeadingText_4"
+        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+        app:layout_constraintTop_toBottomOf="@id/imageView_ic_profile_photo"
+        android:layout_marginTop="16dp"
+        android:text="@string/your_favorite_meals" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_Favorite_Meals"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:paddingBottom="120dp"
+        android:clipToPadding="false"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="135dp"
+        app:layout_constraintTop_toBottomOf="@id/textView_YourFavoriteMeals"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+        app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
+        />
+
+    <TextView
+        android:id="@+id/textView_You_Still_have_not_added_meals"
+        style="@style/SubTitle_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/you_still_have_not_added_any_meals_yet" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
