--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -170,6 +170,13 @@
         <item name="android:textColor">@color/subTextColor</item>
     </style>
 
+    <style name="SubTitle_3">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@color/subTextColor</item>
+    </style>
 
 <!--
     This divider is supposed to show on the Welcome screen twice; on the left and right, but it doesn't
