--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorOnPrimary">@color/onPrimary</item>
         <item name="colorControlActivated">@color/primaryColor</item>
         <item name="colorPrimaryContainer">@color/primaryColorLight</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
     <style name="Theme.Plateful" parent="Base.Theme.Plateful" />
