--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -153,6 +153,14 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="HeadingText_5">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 
     <style name="SubTitle_1">
         <item name="android:layout_width">wrap_content</item>
