--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -83,12 +84,12 @@
         app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
         app:constraint_referenced_ids="recyclerView_Daily_Inspiration"/>
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView_Browse_Cuisines"
         style="@style/HeadingText_3"
         android:layout_marginTop="16dp"
         android:text="@string/browse_cuisines"
         app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@id/barrier_between_card_and_text_beneath" />
+        app:layout_constraintTop_toBottomOf="@id/barrier_between_card_and_text_beneath" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
