--- a/app/src/main/res/layout/daily_inspiration_row.xml
+++ b/app/src/main/res/layout/daily_inspiration_row.xml
@@ -33,11 +33,14 @@
 
             <ImageButton
                 android:id="@+id/imageButton_add_to_favorite_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
                 android:layout_margin="8dp"
                 android:background="@drawable/bg_heart_button"
                 android:padding="8dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:clickable="true"
                 android:src="@drawable/ic_outlined_heart"
                 app:layout_constraintEnd_toEndOf="@id/imageView_Meal_Image"
                 app:layout_constraintTop_toTopOf="@id/imageView_Meal_Image" />
