--- a/app/src/main/res/layout/favorite_meal_row.xml
+++ b/app/src/main/res/layout/favorite_meal_row.xml
@@ -26,6 +26,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <ImageButton
+            android:id="@+id/imageButton_delete_meal_from_favorite"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/bg_heart_button"
+            android:padding="8dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintEnd_toEndOf="@id/imageView_Meal_Image"
+            app:layout_constraintTop_toTopOf="@id/imageView_Meal_Image" />
 
         <TextView
             android:id="@+id/textView_Meal_Name"
