--- a/app/src/main/res/layout/fragment_favorite_meals_screen.xml
+++ b/app/src/main/res/layout/fragment_favorite_meals_screen.xml
@@ -85,4 +85,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/you_still_have_not_added_any_meals_yet" />
 
+    <TextView
+        android:id="@+id/textView_NoFavoritesAvailableForGuest"
+        style="@style/SubTitle_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/no_favorite_meals_for_guest_mode"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
