--- a/app/src/main/res/layout/fragment_weekly_plan_screen.xml
+++ b/app/src/main/res/layout/fragment_weekly_plan_screen.xml
@@ -159,4 +159,16 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="135dp" />
 
+    <TextView
+        android:id="@+id/textView_NoPlansAvailableForGuest"
+        style="@style/SubTitle_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/no_plans_available_in_guest_mode"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
