--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -82,7 +82,7 @@
     </fragment>
     <fragment
         android:id="@+id/splashScreen"
-        android:name="com.example.plateful.splashscreen.view.SplashScreen"
+        android:name="com.example.plateful.splashscreen.SplashScreen"
         tools:layout="@layout/fragment_splash_screen">
         <action
             android:id="@+id/action_splashScreen_to_welcomeScreen"
