--- a/app/src/main/res/layout/fragment_main_search_screen.xml
+++ b/app/src/main/res/layout/fragment_main_search_screen.xml
@@ -1,102 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".search.mainsearch.view.MainSearchScreen">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/top_horizontal_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="32dp" />
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".search.mainsearch.view.MainSearchScreen">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/bottom_horizontal_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="32dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/top_horizontal_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="32dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/left_vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/bottom_horizontal_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="32dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/right_vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/left_vertical_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="82dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/right_vertical_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp" />
 
-    <ImageView
-        android:id="@+id/imageView_ic_profile_photo"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/ic_account"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="39dp"
-        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
-        app:layout_constraintBottom_toTopOf="@id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
-        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-        android:layout_marginBottom="8dp"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="82dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout_MainSearchBar"
-        style="@style/MainSearchTextInputLayout"
-        app:placeholderText="@string/main_search_bar_placeholder"
-        app:layout_constraintEnd_toEndOf="@+id/right_vertical_guideline"
-        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
-        android:layout_width="0dp">
+        <ImageView
+            android:id="@+id/imageView_ic_profile_photo"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_account"
+            app:layout_constraintBottom_toTopOf="@id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
+            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="39dp" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText_MainSearchBar"
-            style="@style/GeneralSearchTextInputEditText" />
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_MainSearchBar"
+            style="@style/MainSearchTextInputLayout"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="@+id/right_vertical_guideline"
+            app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline_between_profile_photo_and_daily_inspiration_text"
+            app:placeholderText="@string/main_search_bar_placeholder">
 
-    <TextView
-        android:id="@+id/textView_SearchByCategory"
-        style="@style/HeadingText_4"
-        android:layout_marginTop="16dp"
-        android:text="@string/search_by_category"
-        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayout_MainSearchBar"
-        />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputEditText_MainSearchBar"
+                style="@style/GeneralSearchTextInputEditText" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/textView_ViewAll"
-        style="@style/SubTitle_2"
-        android:layout_marginTop="10dp"
-        android:text="@string/view_all"
-        android:textStyle="italic"
+        <TextView
+            android:id="@+id/textView_SearchByCategory"
+            style="@style/HeadingText_4"
+            android:layout_marginTop="16dp"
+            android:text="@string/search_by_category"
+            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/textInputLayout_MainSearchBar" />
 
-        app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
-        app:layout_constraintHorizontal_bias="0.911"
-        app:layout_constraintStart_toEndOf="@id/textView_SearchByCategory"
-        app:layout_constraintTop_toTopOf="@id/textView_SearchByCategory" />
+        <TextView
+            android:id="@+id/textView_ViewAll"
+            style="@style/SubTitle_2"
+            android:layout_marginTop="10dp"
+            android:text="@string/view_all"
+            android:textStyle="italic"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_SearchByCategory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
-        app:layout_constraintEnd_toEndOf="@+id/right_vertical_guideline"
-        android:layout_marginTop="6dp"
-        app:layout_constraintTop_toBottomOf="@id/textView_SearchByCategory"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="144dp" />
+            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
+            app:layout_constraintHorizontal_bias="0.911"
+            app:layout_constraintStart_toEndOf="@id/textView_SearchByCategory"
+            app:layout_constraintTop_toTopOf="@id/textView_SearchByCategory" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_SearchByCategory"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            app:layout_constraintBottom_toTopOf="@id/textView_SearchByIngredients"
+            app:layout_constraintEnd_toEndOf="@+id/right_vertical_guideline"
+            app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/textView_SearchByCategory"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="144dp" />
+
+        <TextView
+            android:id="@+id/textView_SearchByIngredients"
+            style="@style/HeadingText_4"
+            android:layout_marginTop="16dp"
+            android:text="@string/search_by_ingredients"
+            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/recyclerView_SearchByCategory" />
+
+        <TextView
+            android:id="@+id/textView_ViewAll_Ingredients"
+            style="@style/SubTitle_2"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/view_all"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
+            app:layout_constraintHorizontal_bias="0.911"
+            app:layout_constraintStart_toEndOf="@id/textView_SearchByIngredients"
+            app:layout_constraintTop_toTopOf="@id/textView_SearchByIngredients" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_SearchByIngredient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_guideline"
+            app:layout_constraintEnd_toEndOf="@+id/right_vertical_guideline"
+            app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@id/textView_SearchByIngredients"
+            android:paddingBottom="120dp"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="144dp" />
+
+        <!--    <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_between_search_ingredient_and_recyclerview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="274dp" />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
