--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -78,7 +78,12 @@
         tools:layout="@layout/fragment_search_results_screen" >
         <argument
             android:name="category"
-            app:argType="com.example.plateful.search.category.model.Category" />
+            app:argType="com.example.plateful.search.category.model.Category"
+            app:nullable="true"/>
+        <argument
+            android:name="ingredient"
+            app:argType="com.example.plateful.search.ingredients.model.Ingredient"
+            app:nullable="true"/>
     </fragment>
     <fragment
         android:id="@+id/splashScreen"
@@ -101,6 +106,9 @@
         <action
             android:id="@+id/action_mainSearchScreen_to_viewAllCategoriesScreen"
             app:destination="@id/viewAllCategoriesScreen" />
+        <action
+            android:id="@+id/action_mainSearchScreen_to_viewAllIngredientsScreen"
+            app:destination="@id/viewAllIngredientsScreen" />
     </fragment>
     <fragment
         android:id="@+id/viewAllCategoriesScreen"
@@ -171,6 +179,26 @@
         <argument
             android:name="cuisine"
             app:argType="com.example.plateful.home.model.Cuisine" />
+    </fragment>
+    <fragment
+        android:id="@+id/viewAllIngredientsScreen"
+        android:name="com.example.plateful.search.ingredients.view.ViewAllIngredientsScreen"
+        android:label="fragment_view_all_ingredients_screen"
+        tools:layout="@layout/fragment_view_all_ingredients_screen" >
+        <action
+            android:id="@+id/action_viewAllIngredientsScreen_to_allIngredientsMeals"
+            app:destination="@id/allIngredientsMeals" />
+    </fragment>
+    <fragment
+        android:id="@+id/allIngredientsMeals"
+        android:name="com.example.plateful.search.ingredients.view.AllIngredientsMeals"
+        android:label="fragment_all_ingredients_meals"
+        tools:layout="@layout/fragment_all_ingredients_meals" >
+        <argument android:name="ingredient"
+            app:argType="com.example.plateful.search.ingredients.model.Ingredient" />
+        <action
+            android:id="@+id/action_allIngredientsMeals_to_searchResultsScreen"
+            app:destination="@id/searchResultsScreen" />
     </fragment>
 
 </navigation>
